fix!: a super rework on prescription apis
