# docs/swagger.json
@@ -1069,6 +1069,47 @@
             }
         },
         "/prescriptions": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Get prescription list",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "prescriptions"
+                ],
+                "summary": "Get prescription list with medical record ID (doctor, patient)",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.PrescriptionInfo"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            },
             "post": {
                 "security": [
                     {
@@ -1175,7 +1216,7 @@
                         "BearerAuth": []
                     }
                 ],
-                "description": "Get prescription list",
+                "description": "Get prescription info by medical record ID",
                 "consumes": [
                     "application/json"
                 ],
@@ -1185,7 +1226,7 @@
                 "tags": [
                     "prescriptions"
                 ],
-                "summary": "Get prescription list with medical record ID (doctor, patient)",
+                "summary": "Get prescription info by medical record ID (doctor, patient)",
                 "parameters": [
                     {
                         "type": "string",
@@ -1199,10 +1240,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/models.PrescriptionInfo"
-                            }
+                            "$ref": "#/definitions/models.PrescriptionInfo"
                         }
                     },
                     "400": {
@@ -1326,6 +1364,65 @@
                         "description": "Internal Server Error"
                     }
                 }
+            },
+            "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Add a new detail to the prescription",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "prescriptions"
+                ],
+                "summary": "Add prescription detail (doctor)",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Prescription ID",
+                        "name": "prescription_id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Prescription Detail Adding request",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.PrescriptionDetailInfo"
+                            }
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
             }
         },
         "/prescriptions/{prescription_id}/confirm": {
@@ -1374,14 +1471,14 @@
                 }
             }
         },
-        "/prescriptions/{prescription_id}/details": {
-            "post": {
+        "/prescriptions/{prescription_id}/{med_id}": {
+            "put": {
                 "security": [
                     {
                         "BearerAuth": []
                     }
                 ],
-                "description": "Add a new detail to the prescription",
+                "description": "Update prescription detail",
                 "consumes": [
                     "application/json"
                 ],
@@ -1391,7 +1488,7 @@
                 "tags": [
                     "prescriptions"
                 ],
-                "summary": "Add prescription detail (doctor)",
+                "summary": "Update prescription detail (doctor)",
                 "parameters": [
                     {
                         "type": "string",
@@ -1401,15 +1498,19 @@
                         "required": true
                     },
                     {
-                        "description": "Prescription Detail Adding request",
+                        "type": "string",
+                        "description": "Medication ID",
+                        "name": "med_id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "New Prescription Detail",
                         "name": "body",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/models.PrescriptionDetail"
-                            }
+                            "$ref": "#/definitions/models.PrescriptionDetail"
                         }
                     }
                 ],
@@ -1433,9 +1534,7 @@
                         "description": "Internal Server Error"
                     }
                 }
-            }
-        },
-        "/prescriptions/{prescription_id}/{detail_id}": {
+            },
             "delete": {
                 "security": [
                     {
@@ -1463,8 +1562,8 @@
                     },
                     {
                         "type": "string",
-                        "description": "Detail ID",
-                        "name": "detail_id",
+                        "description": "Medication ID",
+                        "name": "med_id",
                         "in": "path",
                         "required": true
                     }
@@ -2323,12 +2422,6 @@
         "models.NewPrescriptionRequest": {
             "type": "object",
             "properties": {
-                "details": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/models.PrescriptionDetail"
-                    }
-                },
                 "is_insurance_covered": {
                     "type": "boolean"
                 },
@@ -2485,9 +2578,6 @@
                 "instructions": {
                     "type": "string"
                 },
-                "med_id": {
-                    "type": "integer"
-                },
                 "morning_dosage": {
                     "type": "number"
                 },
@@ -2501,9 +2591,6 @@
             "properties": {
                 "afternoon_dosage": {
                     "type": "number"
-                },
-                "detail_id": {
-                    "type": "integer"
                 },
                 "dosage_unit": {
                     "type": "string"
@@ -2554,12 +2641,6 @@
         "models.PrescriptionUpdateRequest": {
             "type": "object",
             "properties": {
-                "details": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/models.PrescriptionDetail"
-                    }
-                },
                 "is_insurance_covered": {
                     "type": "boolean"
                 },
